--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,9 +4,40 @@ body {
     color: #FFFFFF;
 }
 
+#obi-wan,
+#luke-skywalker,
+#darth-sidious,
+#darth-maul {
+    border: 4px solid green;
+    height: 150px;
+    width: 200px;
+    background-color: #FFFFFF;
+    text-align: center;
+    padding: 20px 0 0;
+    color: black;
+}
 
+.character-cards {
+    position: relative;
+}
 
 #your-character {
     height: 150px;
     width: 200px;
+}
+
+.char-name {
+    position: absolute;
+    top: 0;
+    left: 55px;
+}
+
+[id$="health"] {
+    position: absolute;
+    bottom: 0;
+    left: 60px;
+}
+
+#enemies {
+    float: left;
 }
