--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@ body {
     background-image: url("../images/background.png");
     font-family: 'VT323', monospace;
     color: #FFFFFF;
+    height: 1024px;
 }
 
 #obi-wan,
